// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders IssueSeverityTag with all prop options: {"severity":"CRITICAL"} 1`] = `
"<div class=\\"flex items-center gap-x-1.5 v-popper--has-tooltip\\">
  <z-icon icon=\\"issue-critical\\" size=\\"x-small\\" color=\\"cherry\\"></z-icon> <span class=\\"text-sm capitalize tracking-wide text-vanilla-400\\">Critical</span>
</div>"
`;

exports[`renders IssueSeverityTag with all prop options: {"severity":"MAJOR"} 1`] = `
"<div class=\\"flex items-center gap-x-1.5 v-popper--has-tooltip\\">
  <z-icon icon=\\"issue-major\\" size=\\"x-small\\" color=\\"honey\\"></z-icon> <span class=\\"text-sm capitalize tracking-wide text-vanilla-400\\">Major</span>
</div>"
`;

exports[`renders IssueSeverityTag with all prop options: {"severity":"MINOR"} 1`] = `
"<div class=\\"flex items-center gap-x-1.5 v-popper--has-tooltip\\">
  <z-icon icon=\\"issue-minor\\" size=\\"x-small\\" color=\\"\\"></z-icon> <span class=\\"text-sm capitalize tracking-wide text-vanilla-400\\">Minor</span>
</div>"
`;
